--- a/table.html
+++ b/table.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style/nav.css">
+    <link rel="stylesheet" href="style/table.css">
 </head>
 <body>
     <header>
@@ -16,5 +17,67 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <div class="headline">
+            <h2>Table Tennis Tournament</h2>
+        </div>
+        <div class="result">
+            <table>
+                <caption>Tournament Schedule and Results</caption>
+                <thead>
+                    <tr>
+                        <th>Round 1</th>
+                        <th>Player A</th>
+                        <th>Player B</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>March 1</td>
+                        <td>John</td>
+                        <td>Alice</td>
+                    </tr>
+                    <tr>
+                        <td>Match 2</td>
+                        <td>Mark</td>
+                        <td>Sarah</td>
+                    </tr>
+                </tbody>
+                <thead>
+                    <tr>
+                        <th>Round 2</th>
+                        <th>Player C</th>
+                        <th>Player D</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>March 3</td>
+                        <td>TBD</td>
+                        <td>TBD</td>
+                    </tr>
+                    <tr>
+                        <td>Match 4</td>
+                        <td>TBD</td>
+                        <td>TBD</td>
+                    </tr>
+                </tbody>
+                <thead>
+                    <tr>
+                        <th>Final</th>
+                        <th>Winner of the Match 3</th>
+                        <th>Winner of the Match 4</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Champion</td>
+                        <td>TBD</td>
+                        <td>TBD</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </main>
 </body>
 </html>
