--- a/story.html
+++ b/story.html
@@ -58,6 +58,7 @@
                     <option value="2">Average</option>
                     <option value="1">Below Average</option>
                 </select>
+                <input type="submit" value="Submit">
             </label>
         </div>
     </main>
